--- a/app/src/main/res/layout/activity_json.xml
+++ b/app/src/main/res/layout/activity_json.xml
@@ -15,7 +15,7 @@
         android:id="@+id/btnCarregar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Carregar JSON da Web"
+        android:text="Carregar JSON Dexter"
         />
 
     <TextView
